Removed stdio static buffers - this reduces memory footprint by 1kbyte. Minor changes in Makefiles.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ BIN		= bin/sh bin/ls bin/echo bin/cal bin/cp bin/date bin/mkdir \
 		  bin/sync bin/mv bin/rm bin/rmdir bin/stty bin/od bin/ed \
 		  bin/cat bin/ln bin/wc bin/pwd bin/df bin/mount bin/umount \
 		  bin/clock bin/halt
-SYS		= sys/bkunix sys/bkboot
+SYS		= sys/bkunix sys/boot
 
 DEV		= dev/tty0!c0:0 dev/fd0!b0:0 dev/fd1!b0:1
 DSK		= root.bkd
@@ -26,7 +26,7 @@ clean:
 root.bkd:	remake
 		pdp11-strip $(ETC) $(BIN)
 		dd bs=512 count=1600 < /dev/zero > $@
-		$(FSUTIL) -n -s753664 -bsys/bkboot $@
+		$(FSUTIL) -n -s753664 -bsys/boot $@
 		cp sys/bkunix .
 		$(FSUTIL) -a $@ bkunix usr/ tmp/
 		@rm -f bkunix
