--- a/src/etc/Makefile
+++ b/src/etc/Makefile
@@ -27,15 +27,15 @@ clean:
 
 %: %.o
 		$(CC) $(LDFLAGS) -o $@ $^
-		pdp11-disasm $@ > $@.dis
+#		pdp11-disasm $@ > $@.dis
 
 mkfs:		mkfs.o ../libfs/libfs.a
 		$(CC) $(LDFLAGS) -v -o $@ $^ ../libfs/libfs.a
-		pdp11-disasm $@ > $@.dis
+#		pdp11-disasm $@ > $@.dis
 
 fsck:		fsck.o ../libfs/libfs.a
 		$(CC) $(LDFLAGS) -v -o $@ $^ ../libfs/libfs.a
-		pdp11-disasm $@ > $@.dis
+#		pdp11-disasm $@ > $@.dis
 
 ../libfs/libfs.a:
 		$(MAKE) -C ../libfs
