Added sources of bkdisk.exe - utility for writing/reading/formatting 800k floppies under Windows.

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -46,55 +46,32 @@ depend:		clean
 
 ### DO NOT DELETE THIS LINE
 cal.o: cal.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h
-cat.o: cat.c ../libc/stdio.h ../libc/ansidecl.h ../libc/unistd.h \
-  ../libc/fcntl.h ../libc/sys/types.h ../libc/sys/stat.h
+cat.o: cat.c ../libc/stdio.h ../libc/ansidecl.h ../libc/unistd.h ../libc/fcntl.h ../libc/sys/types.h ../libc/sys/stat.h
+charcode.o: charcode.c
 clock.o: clock.c ../libc/time.h ../libc/ansidecl.h ../libc/signal.h
-cp.o: cp.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/string.h \
-  ../libc/unistd.h ../libc/fcntl.h ../libc/sys/types.h ../libc/sys/stat.h
-date.o: date.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h \
-  ../libc/time.h
-df.o: df.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h \
-  ../libc/unistd.h ../libc/dirent.h ../libc/mtab.h ../libc/sys/stat.h \
-  ../libc/sys/fs.h
+cp.o: cp.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/string.h ../libc/unistd.h ../libc/fcntl.h ../libc/sys/types.h ../libc/sys/stat.h
+date.o: date.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/time.h
+df.o: df.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h ../libc/unistd.h ../libc/dirent.h ../libc/mtab.h ../libc/sys/stat.h ../libc/sys/fs.h
 echo.o: echo.c ../libc/stdio.h ../libc/ansidecl.h
-ed.o: ed.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h \
-  ../libc/signal.h ../libc/fcntl.h ../libc/sgtty.h ../libc/setjmp.h \
-  ../libc/sys/wait.h
-fcp.o: fcp.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h \
-  ../libc/string.h ../libc/unistd.h ../libc/fcntl.h ../libc/sys/types.h \
-  ../libc/sys/stat.h
+ed.o: ed.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/signal.h ../libc/fcntl.h ../libc/sgtty.h ../libc/setjmp.h ../libc/sys/wait.h
 halt.o: halt.c ../libc/unistd.h ../libc/ansidecl.h
-hello.o: hello.c ../libc/stdio.h ../libc/ansidecl.h
+hello.o: hello.c ../libc/unistd.h ../libc/ansidecl.h
 ln.o: ln.c ../libc/unistd.h ../libc/ansidecl.h ../libc/sys/stat.h
-ls.o: ls.c ../libc/ansidecl.h ../libc/stdlib.h ../libc/stdio.h \
-  ../libc/string.h ../libc/unistd.h ../libc/fcntl.h ../libc/time.h \
-  ../libc/dirent.h ../libc/sys/types.h ../libc/sys/stat.h
-mkdir.o: mkdir.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h \
-  ../libc/unistd.h ../libc/signal.h ../libc/sys/stat.h
-mount.o: mount.c ../libc/stdio.h ../libc/ansidecl.h ../libc/unistd.h \
-  ../libc/dirent.h ../libc/mtab.h ../libc/sys/stat.h
-mv.o: mv.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h \
-  ../libc/unistd.h ../libc/sys/stat.h ../libc/sys/wait.h
-od.o: od.c ../libc/stdio.h ../libc/ansidecl.h ../libc/unistd.h \
-  ../libc/fcntl.h
-pwd.o: pwd.c ../libc/stdio.h ../libc/ansidecl.h ../libc/stdlib.h \
-  ../libc/unistd.h ../libc/sys/stat.h ../libc/dirent.h
-rm.o: rm.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h \
-  ../libc/unistd.h ../libc/sys/stat.h ../libc/sys/wait.h
-rmdir.o: rmdir.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h \
-  ../libc/string.h ../libc/unistd.h ../libc/fcntl.h ../libc/dirent.h \
-  ../libc/sys/types.h ../libc/sys/stat.h
-sh.o: sh.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h \
-  ../libc/signal.h ../libc/setjmp.h ../libc/sys/wait.h
+ls.o: ls.c ../libc/ansidecl.h ../libc/stdlib.h ../libc/stdio.h ../libc/string.h ../libc/unistd.h ../libc/fcntl.h ../libc/time.h ../libc/dirent.h ../libc/sys/types.h ../libc/sys/stat.h
+mkdir.o: mkdir.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h ../libc/unistd.h ../libc/signal.h ../libc/sys/stat.h
+mount.o: mount.c ../libc/stdio.h ../libc/ansidecl.h ../libc/unistd.h ../libc/dirent.h ../libc/mtab.h ../libc/sys/stat.h
+mv.o: mv.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h ../libc/unistd.h ../libc/sys/stat.h ../libc/sys/wait.h
+od.o: od.c ../libc/stdio.h ../libc/ansidecl.h ../libc/unistd.h ../libc/fcntl.h
+pwd.o: pwd.c ../libc/stdio.h ../libc/ansidecl.h ../libc/stdlib.h ../libc/unistd.h ../libc/sys/stat.h ../libc/dirent.h
+rm.o: rm.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h ../libc/unistd.h ../libc/sys/stat.h ../libc/sys/wait.h
+rmdir.o: rmdir.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h ../libc/string.h ../libc/unistd.h ../libc/fcntl.h ../libc/dirent.h ../libc/sys/types.h ../libc/sys/stat.h
+sh.o: sh.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/signal.h ../libc/setjmp.h ../libc/sys/wait.h
 stty.o: stty.c ../libc/stdio.h ../libc/ansidecl.h ../libc/sgtty.h
 sync.o: sync.c ../libc/unistd.h ../libc/ansidecl.h
-testarith.o: testarith.c ../libc/stdlib.h ../libc/ansidecl.h \
-  ../libc/stdio.h
-testprintf.o: testprintf.c ../libc/stdlib.h ../libc/ansidecl.h \
-  ../libc/stdio.h ../libc/string.h
+testarith.o: testarith.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h
+testprintf.o: testprintf.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/stdio.h ../libc/string.h
 umount.o: umount.c ../libc/string.h ../libc/ansidecl.h ../libc/unistd.h
-wc.o: wc.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h \
-  ../libc/unistd.h ../libc/fcntl.h
+wc.o: wc.c ../libc/stdio.h ../libc/ansidecl.h ../libc/string.h ../libc/unistd.h ../libc/fcntl.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
 # see make depend above
