Implemented standalone printf().

--- a/src/stand/Makefile
+++ b/src/stand/Makefile
@@ -14,17 +14,18 @@
 CC		= pdp11-pcc
 
 CFLAGS		= -O
-LIBS		= -L/usr/local/lib/pdp11 -lcrt
+LIBS		= libstand.a -L/usr/local/lib/pdp11 -lcrt
 
 # Using ported AT&T UNIX utils.
 AS		= pdp11-asm
+AR		= pdp11-ar
 LD		= pdp11-ld
 SIZE		= pdp11-size -o
 FSUTIL		= u6-fsutil -F
 LDFLAGS		= -X
 
-SRCS		= start.S console.c
-OBJS		= start.o console.o
+SRCS		= start.S console.c printf.c strlen.c
+OBJS		= console.o printf.o strlen.o
 PROG		= fdfmt fdgetrom fdinfo hello #\
 		  tstsh tstlsh tstmul tstdiv tstrem tstuldiv tstulrem \
 		  tstlmul tstldiv tstlrem
@@ -40,62 +41,66 @@ all:		$(PROG)
 		$(SIZE) $(PROG)
 
 clean:
-		rm -f *~ *.o *.s *.dis a.out $(PROG)
+		rm -f *~ *.o *.s *.a *.dis a.out $(PROG)
 
-hello:		$(OBJS) hello.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) hello.o $(LIBS)
+libstand.a:	$(OBJS)
+		@-rm -f $@
+		$(AR) cru $@ $(OBJS)
+
+hello:		start.o libstand.a hello.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o hello.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstsh:		$(OBJS) tstsh.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstsh.o $(LIBS)
+tstsh:		start.o libstand.a tstsh.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstsh.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstlsh:		$(OBJS) tstlsh.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstlsh.o $(LIBS)
+tstlsh:		start.o libstand.a tstlsh.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstlsh.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstmul:		$(OBJS) tstmul.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstmul.o $(LIBS)
+tstmul:		start.o libstand.a tstmul.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstmul.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstdiv:		$(OBJS) tstdiv.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstdiv.o $(LIBS)
+tstdiv:		start.o libstand.a tstdiv.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstdiv.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstrem:		$(OBJS) tstrem.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstrem.o $(LIBS)
+tstrem:		start.o libstand.a tstrem.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstrem.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstuldiv:	$(OBJS) tstuldiv.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstuldiv.o $(LIBS)
+tstuldiv:	start.o libstand.a tstuldiv.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstuldiv.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstulrem:	$(OBJS) tstulrem.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstulrem.o $(LIBS)
+tstulrem:	start.o libstand.a tstulrem.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstulrem.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstlmul:	$(OBJS) tstlmul.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstlmul.o $(LIBS)
+tstlmul:	start.o libstand.a tstlmul.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstlmul.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstldiv:	$(OBJS) tstldiv.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstldiv.o $(LIBS)
+tstldiv:	start.o libstand.a tstldiv.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstldiv.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-tstlrem:	$(OBJS) tstlrem.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) tstlrem.o $(LIBS)
+tstlrem:	start.o libstand.a tstlrem.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o tstlrem.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-fdgetrom:	$(OBJS) fdgetrom.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) fdgetrom.o $(LIBS)
+fdgetrom:	start.o libstand.a fdgetrom.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o fdgetrom.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-fdinfo:		$(OBJS) fdinfo.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) fdinfo.o $(LIBS)
+fdinfo:		start.o libstand.a fdinfo.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o fdinfo.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
-fdfmt:		$(OBJS) fdfmt.o
-		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ $(OBJS) fdfmt.o $(LIBS)
+fdfmt:		start.o libstand.a fdfmt.o
+		$(LD) $(LDFLAGS) -a$(HIBASE) -o $@ start.o fdfmt.o $(LIBS)
 		pdp11-disasm -a$(HIBASE) $@ > $@.dis
 
 install:	$(PROG)	../root.bkd
