--- a/src/stand/Makefile
+++ b/src/stand/Makefile
@@ -34,8 +34,8 @@ CPPFLAGS	= -I. -DKERNEL
 HIBASE		= 0120000
 
 # For BK-0011M model.
-CPPFLAGS	+= -DBK0011
-HIBASE		= 0100000
+#CPPFLAGS	+= -DBK0011
+#HIBASE		= 0100000
 
 all:		$(PROG)
 		$(SIZE) $(PROG)
